# localghost

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE.md  README.md  TASKS.md
localghost/: main.py  pyproject.toml
localghost/backend/: main.py
localghost/backend/benchmark/: load_test.py
localghost/backend/database/: db.py
localghost/backend/models/: scan.py
localghost/backend/routers/: history.py  report.py  scan.py
localghost/backend/scanner/: port_scan.py  vuln_scan.py
localghost/backend/scanners/: cookie_scan.py  cors_scan.py  ddos_test.py  dns_scan.py  load_test.py  port_scan.py  rate_limit_test.py  ssl_scan.py  tech_detect.py  vuln_scan.py  xss_scan.py
localghost/backend/services/: scanner.py  scoring.py
localghost/backend/utils/: validators.py
localghost/frontend/: index.html
localghost/frontend/static/: app.js  style.css
localghost/frontend/static/js/: api.js  app.js  history.js  results.js  score.js  theme.js  utils.js
