[project]
name = "localghost"
version = "0.2.0"
description = "Localhost pentesting & benchmarking toolkit — possess & analyze local running servers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.131.0",
    "jinja2>=3.1.6",
]
